--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Todo List Using React and Solidity",
   "author": "wilhelmmichto",
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.1",
     "@types/react": "^17.0.14",
